--- a/adidas.html
+++ b/adidas.html
@@ -5,7 +5,7 @@
   <title>sneakercollector</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
  
-  <link rel="stylesheet" href="style.css" type="text/css" />
+<!--  <link rel="stylesheet" href="style.css" type="text/css" /> -->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
