--- a/foams.html
+++ b/foams.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-  <h1>Fuego Kicks</h1>
-  <div class="murals"></div>
+  <h1>Foam Shoes</h1>
+  <div class="shoes_foams"></div>
 </body>
 </html>
