--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Fuego Kicks</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
   <h1>Fuego Kicks</h1>
+  <div class="first"><a href="adidas.html"><img src="http://i.imgur.com/ZEWeqiT.png" width="200" height="200" alt="Adidas"/></a>
+  <a href="nike.html"><img src="http://i.imgur.com/73RAgmf.jpg" width="200" height="200" atl="Nike"/></a></div>
+  <div class="first"><a href="foams.html"><img src="http://i.imgur.com/40fThqS.jpg" width="200" height="200" atl="Foams"/></a>
+  <a href="jordans.html"><img src="http://i.imgur.com/PjwJ66f.jpg" width="200" height="200" atl="Jordans"/></a></div>
 </body>
 </html>
